--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -9,7 +9,7 @@ You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
 <resources>
-    <string name="app_name_real">Markor</string>
+    <string name="app_name_real" translatable="false">Markor</string>
     <string name="app_name" translatable="false">@string/app_name_real</string>
     <string name="app_license_name" translatable="false">Apache 2.0</string>
     <string name="app_community_url" translatable="false">https://matrix.to/#/#markor:matrix.org</string>
@@ -24,7 +24,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="more_info_on_how_to_donate_or_otherwise_support_this_project" translatable="false">@string/more_info_on_how_to_donate_or_otherwise_support_this_project_text</string>
     <string name="donate_" translatable="false">@string/donate</string>
     <string name="app_contact_email_reverse" translatable="false">gro.xobliam@kcabdeef+rentnasg</string>
-    <string name="huuid">hUUID</string>
+    <string name="huuid" translatable="false">hUUID</string>
 
 
     <string name="checkmark_symbol" translatable="false">\u2301</string>
@@ -322,11 +322,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="pref_key__restore_settings" translatable="false">pref_key__restore_settings</string>
     <string name="pref_key__backup_settings" translatable="false">pref_key__backup_settings</string>
     <string name="hidden_password" translatable="false">****</string>
-    <string name="pref_key__todotxt__additional_projects_contexts">"pref_key__todotxt__additional_projects_contexts"</string>
-    <string name="pref_key__todotxt__due_date_offset">pref_key__todotxt_due_date_offset</string>
-    <string name="action_format_keyvalue">action_format_keyvalue</string>
-    <string name="action_format_plaintext">action_format_plaintext</string>
-    <string name="action_format_markdown">action_format_markdown</string>
-    <string name="action_format_todotxt">action_format_todotxt</string>
-    <string name="action_format_zimwiki">action_format_zimwiki</string>
+    <string name="pref_key__todotxt__additional_projects_contexts" translatable="false">"pref_key__todotxt__additional_projects_contexts"</string>
+    <string name="pref_key__todotxt__due_date_offset" translatable="false">pref_key__todotxt_due_date_offset</string>
+    <string name="action_format_keyvalue" translatable="false">action_format_keyvalue</string>
+    <string name="action_format_plaintext" translatable="false">action_format_plaintext</string>
+    <string name="action_format_markdown" translatable="false">action_format_markdown</string>
+    <string name="action_format_todotxt" translatable="false">action_format_todotxt</string>
+    <string name="action_format_zimwiki" translatable="false">action_format_zimwiki</string>
 </resources>
