--- a/app/src/main/res/menu/filesystem__menu.xml
+++ b/app/src/main/res/menu/filesystem__menu.xml
@@ -40,16 +40,16 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_delete_selected_items"
-        android:icon="@drawable/ic_delete_black_24dp"
-        android:title="@string/delete"
+        android:id="@+id/action_info_selected_item"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/details"
         android:visible="false"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_info_selected_item"
-        android:icon="@drawable/ic_info_black_24dp"
-        android:title="@string/details"
+        android:id="@+id/action_delete_selected_items"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="@string/delete"
         android:visible="false"
         app:showAsAction="always" />
 
@@ -61,12 +61,18 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_copy_selected_items"
+        android:icon="@drawable/ic_baseline_file_copy_24"
+        android:title="@string/copy"
+        android:visible="false"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_share_files"
         android:icon="@drawable/ic_share_black_24dp"
         android:title="@string/share"
         android:visible="false"
-        app:showAsAction="always" />
-
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_go_to"
