used spiner instead of listview

--- a/app/src/main/res/layout/list_group_history_item.xml
+++ b/app/src/main/res/layout/list_group_history_item.xml
@@ -9,4 +9,5 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:drawableLeft="@drawable/ic_history_black_24dp"
+    android:drawablePadding="5dp"
     android:paddingLeft="10dp" />
