--- a/app/src/main/res/layout/expandable_list_group_item.xml
+++ b/app/src/main/res/layout/expandable_list_group_item.xml
@@ -8,4 +8,5 @@
     android:gravity="center_vertical"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:drawablePadding="5dp"
     android:paddingLeft="10dp" />
