rework start on bottom / cursor pos restore

--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -355,9 +355,9 @@
                 android:summary="@string/edit_text_in_center_of_screen"
                 android:title="@string/center_text" />
             <CheckBoxPreference
-                android:defaultValue="true"
+                android:defaultValue="false"
                 android:icon="@drawable/ic_vertical_align_bottom_black_24dp"
-                android:key="@string/pref_key__editor_start_editing_on_bottom"
+                android:key="@string/pref_key__editor_start_editing_on_bottom_v2"
                 android:summary="@string/start_on_bottom_when_loading_document"
                 android:title="@string/start_on_bottom" />
             <ListPreference
