--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -84,16 +84,10 @@
                 android:title="@string/max_search_depth" />
             <android.support.v7.preference.EditTextPreference
                 android:defaultValue=""
-                android:dialogMessage="@string/specify_directories_that_should_not_be_searched"
+                android:dialogMessage="@string/do_not_search_specified_files_and_folders"
                 android:icon="@drawable/ic_baseline_rule_folder_24"
-                android:key="@string/pref_key__ignored_directories"
-                android:title="@string/ignored_directories" />
-            <android.support.v7.preference.EditTextPreference
-                android:defaultValue="@string/empty_string"
-                android:dialogMessage="@string/ignored_search_file_names_dialog"
-                android:icon="@drawable/ic_baseline_rule_folder_24"
-                android:key="@string/pref_key__ignored_search_file_names"
-                android:title="@string/ignored_search_file_names" />
+                android:key="@string/pref_key__filesearch_ignorelist"
+                android:title="@string/ignore_list" />
         </PreferenceCategory>
 
 
