Add options to choose between no, a simple and an extended table of contents in markdown view mode

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -124,4 +124,16 @@
         <item translatable="false">*</item>
         <item translatable="false">+</item>
     </string-array>
+
+    <string-array name="pref_arrdisp__markdown_toc" translatable="false">
+        <item translatable="false">@string/no_toc</item>
+        <item translatable="false">@string/simple_toc</item>
+        <item translatable="false">@string/extended_toc</item>
+    </string-array>
+    <string-array name="pref_arrkeys__markdown_toc" translatable="false">
+        <item translatable="false">none</item>
+        <item translatable="false">simple</item>
+        <item translatable="false">extended</item>
+    </string-array>
+
 </resources>
