--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -458,10 +458,14 @@
                     android:key="@string/pref_key__markdown_render_math"
                     android:summary="@string/katex_latex"
                     android:title="@string/math" />
-                <CheckBoxPreference
-                    android:defaultValue="false"
+                <ListPreference
+                    android:defaultValue="none"
+                    android:dialogTitle="@string/table_of_contents"
+                    android:entries="@array/pref_arrdisp__markdown_toc"
+                    android:entryValues="@array/pref_arrkeys__markdown_toc"
                     android:icon="@drawable/ic_list_black_24dp"
-                    android:key="@string/pref_key__markdown_show_toc"
+                    android:key="@string/pref_key__markdown_table_of_contents"
+                    android:summary="%1$s"
                     android:title="@string/table_of_contents" />
             </PreferenceCategory>
             <PreferenceCategory android:title="@string/textactions">
