--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -461,8 +461,8 @@
                 <MultiSelectListPreference android:title="@string/table_of_contents"
                     android:dialogTitle="@string/table_of_contents"
                     android:entries="@array/pref_arrdisp__markdown_toc"
-                    android:entryValues="@array/pref_arrkeys__markdown_toc"
-                    android:defaultValue="@array/pref_arrdefault__markdown_toc"
+                    android:entryValues="@array/arr_one_to_six"
+                    android:defaultValue="@array/arr_one_to_three"
                     android:icon="@drawable/ic_list_black_24dp"
                     android:key="@string/pref_key__markdown_table_of_contents" />
             </PreferenceCategory>
