--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -126,12 +126,12 @@
     </string-array>
 
     <string-array name="pref_arrdisp__markdown_toc" translatable="false">
-        <item translatable="false">@string/h1</item>
-        <item translatable="false">@string/h2</item>
-        <item translatable="false">@string/h3</item>
-        <item translatable="false">@string/h4</item>
-        <item translatable="false">@string/h5</item>
-        <item translatable="false">@string/h6</item>
+        <item translatable="false">@string/heading_1</item>
+        <item translatable="false">@string/heading_2</item>
+        <item translatable="false">@string/heading_3</item>
+        <item translatable="false">@string/heading_4</item>
+        <item translatable="false">@string/heading_5</item>
+        <item translatable="false">@string/heading_6</item>
     </string-array>
     <string-array name="arr_one_to_six" translatable="false">
         <item translatable="false">1</item>
