--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -458,11 +458,12 @@
                     android:key="@string/pref_key__markdown_render_math"
                     android:summary="@string/katex_latex"
                     android:title="@string/math" />
-                <CheckBoxPreference
-                    android:defaultValue="false"
+                <MultiSelectListPreference android:title="@string/table_of_contents"
+                    android:dialogTitle="@string/table_of_contents"
+                    android:entries="@array/pref_arrdisp__markdown_toc"
+                    android:entryValues="@array/arr_one_to_six"
                     android:icon="@drawable/ic_list_black_24dp"
-                    android:key="@string/pref_key__markdown_show_toc"
-                    android:title="@string/table_of_contents" />
+                    android:key="@string/pref_key__markdown_table_of_contents_enabled_levels" />
             </PreferenceCategory>
             <PreferenceCategory android:title="@string/textactions">
                 <Preference
