--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -142,11 +142,11 @@
                 android:title="@string/keep_screen_on" />
 
             <android.support.v7.preference.EditTextPreference
-                android:defaultValue="----\\n"
-                android:dialogMessage="@string/share_into_prefix_format_dialog"
+                android:defaultValue="\\n----\\n"
+                android:dialogMessage="@string/share_into_format_prefix_for_text_shared"
                 android:icon="@drawable/ic_share_black_24dp"
-                android:key="@string/pref_key__share_into_prefix"
-                android:title="@string/share_into_prefix" />
+                android:key="@string/pref_key__share_into_format"
+                android:title="@string/share_into_format" />
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/main_view">
