--- a/app/src/main/res/layout/document__activity.xml
+++ b/app/src/main/res/layout/document__activity.xml
@@ -27,13 +27,14 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            android:theme="@style/LightTextToolbarOverlay">
+            android:theme="@style/LightTextToolbarOverlay"
+            app:contentInsetStart="0dp">
 
             <TextView
                 android:id="@+id/note__activity__text_note_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center_vertical|start"
                 android:fontFamily="sans-serif-medium"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
