Adding the other inset fixes too

--- a/app/src/main/res/layout/document__activity.xml
+++ b/app/src/main/res/layout/document__activity.xml
@@ -28,7 +28,9 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:theme="@style/LightTextToolbarOverlay"
-            app:contentInsetStart="0dp">
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            app:contentInsetStartWithNavigation="0dp">
 
             <TextView
                 android:id="@+id/note__activity__text_note_title"
